apps/seraex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seraex
  namespace: seraex
spec:
  clusterIP: None
  selector:
    app: seraex
