apps/seraex/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: seraex
  namespace: seraex
spec:
  endpointSelector:
    matchLabels:
      app: seraex
  egress:
    - toEndpoints:
        - matchLabels:
            app: temporal
            k8s:io.kubernetes.pod.namespace: temporal
      toPorts:
        - ports: [{ port: "7233", protocol: TCP }]
    - toEntities: [host]
      toPorts:
        - ports: [{ port: "53", protocol: ANY }]
          rules:
            dns: [{ matchPattern: "*" }]
    - toFQDNs:
        - matchName: "api.anthropic.com"
      toPorts:
        - ports: [{ port: "443", protocol: TCP }]
