apps/seraex/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: seraex
spec:
  podSelector: {}
  policyTypes:
    - Ingress
